fix:fixed-the-services-text-spacing
I added the grid to make the element stay in order they are displayed in as block level and also have access to gap property of grid to be able to add the space to the contents, using thier parents without needing to apply the margin bottom to each child element

--- a/src/output.css
+++ b/src/output.css
@@ -616,6 +616,10 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .w-\[245px\] {
   width: 245px;
 }
@@ -640,8 +644,25 @@ video {
   justify-content: center;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-14 {
+  gap: 3.5rem;
+}
+
 .text-pretty {
   text-wrap: pretty;
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .text-2xl {
